SILGen: Calculate substituted formal type upfront

Also for class method callees, use the formal type of the base
method and not the override, fixing an issue with concrete
subclasses of generic base classes which bind a generic
parameter to a tuple type.

Fixes <https://bugs.swift.org/browse/SR-3541>.